--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
 
   flutter_screenutil: ^5.7.0
 
